Updated the packages' package.json file. Renamed the name field with better practice names for yarn workspaces.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gql-typescript-server",
+  "name": "@abb/server",
   "license": "MIT",
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
