Added shared yup validations and messages to the common package. Refactored other packages using validation to play nice with the common package.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
+    "@abb/common": "1.0.0",
     "@graphql-codegen/cli": "1.21.4",
     "@graphql-codegen/typescript": "1.22.0",
     "@graphql-codegen/typescript-document-nodes": "1.17.11",
