--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,18 @@
 {
   "name": "@abb/common",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "license": "MIT",
+  "scripts": {
+    "build": "rimraf ./dist && tsc"
+  },
+  "devDependencies": {
+    "@types/yup": "^0.29.11",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "yup": "^0.32.9"
+  }
 }
