--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@graphql-codegen/cli": "^1.21.4",
+    "@graphql-codegen/typescript": "^1.22.0",
+    "@graphql-codegen/typescript-operations": "^1.17.16",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.4",
+    "@graphql-codegen/typescript-resolvers": "^1.19.1"
+  },
+  "scripts": {
+    "gen-schema": "graphql-codegen --config codegen.yml"
+  }
 }
