--- a/packages/controller/tsconfig.json
+++ b/packages/controller/tsconfig.json
@@ -20,6 +20,7 @@
     "skipLibCheck": true,
     "declaration": true
   },
+  "include": ["./**/*.d.ts"],
   "exclude": [
     "node_modules",
     "build",
