Fixed issue with typescript not creating the dist folder in the controller package.

--- a/packages/controller/tsconfig.json
+++ b/packages/controller/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist",
+    "outDir": "./dist",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "esnext.asynciterable"],
@@ -15,12 +15,10 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
     "noUnusedLocals": true,
     "skipLibCheck": true,
     "declaration": true
   },
-  "include": ["./**/*.d.ts"],
   "exclude": [
     "node_modules",
     "build",
