--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@abb/controller",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "build": "rimraf ./dist && tsc"
   },
   "devDependencies": {
-    "@types/node": "^15.3.1",
-    "@types/react": "^17.0.6",
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.7",
     "@types/react-dom": "^17.0.5",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.4"
