--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
     "jest": "^26.6.3",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.5",
     "ts-node": "9.1.1",
     "ts-node-dev": "^1.1.6",
@@ -43,7 +44,9 @@
     "yup": "^0.32.9"
   },
   "scripts": {
+    "build": "rimraf ./dist && tsc",
     "test": "NODE_ENV=test jest --watch --runInBand",
-    "start": "NODE_ENV=development tsnd --respawn src/index.ts"
+    "start:dev": "NODE_ENV=development tsnd --respawn src/index.ts",
+    "start": "NODE_ENV=production node dist/index.js"
   }
 }
