--- a/ormconfig.json
+++ b/ormconfig.json
@@ -19,6 +19,24 @@
     }
   },
   {
+    "name": "production",
+    "type": "postgres",
+    "synchronize": true,
+    "logging": true,
+    "ssl": true,
+    "extra": {
+      "ssl": { "rejectUnauthorized": false }
+    },
+    "entities": ["dist/entity/**/*.js"],
+    "migrations": ["dist/migration/**/*.js"],
+    "subscribers": ["dist/subscriber/**/*.js"],
+    "cli": {
+      "entitiesDir": "src/entity",
+      "migrationsDir": "src/migration",
+      "subscribersDir": "src/subscriber"
+    }
+  },
+  {
     "name": "test",
     "type": "postgres",
     "host": "localhost",
