--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,14 +10,14 @@
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.26.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.1",
+    "@types/node": "^15.6.1",
     "@types/tough-cookie": "^4.0.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
-    "jest": "^26.6.3",
+    "jest": "^27.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.5",
-    "ts-node": "9.1.1",
+    "ts-node": "10.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "4.2.4"
   },
@@ -28,13 +28,13 @@
     "axios-cookiejar-support": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^5.2.0",
-    "dotenv": "^9.0.2",
-    "express-session": "^1.17.1",
+    "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.0",
     "graphql-middleware": "^6.0.10",
     "graphql-request": "^3.4.0",
     "graphql-tools": "^7.0.4",
-    "ioredis": "^4.27.2",
+    "ioredis": "^4.27.3",
     "node-fetch": "^2.6.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
@@ -47,6 +47,6 @@
     "build": "rimraf ./dist && tsc",
     "test": "NODE_ENV=test jest --watch --runInBand",
     "start:dev": "NODE_ENV=development tsnd --respawn src/index.ts",
-    "start": "NODE_ENV=production node dist/index.js"
+    "start": "NODE_ENV=production node ./dist/index.js"
   }
 }
