Fixed issue with types not being found, modified their package.json. Modified codegen.yml to generate a ts file for the frontend and for backend added @codegen/add package so file can also generate the contextType without the need of always adding it after generation.

--- a/packages/controller/tsconfig.json
+++ b/packages/controller/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "./dist",
+    "outDir": "dist",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "esnext.asynciterable"],
@@ -21,7 +21,7 @@
   },
   "exclude": [
     "node_modules",
-    "build",
+    "dist",
     "scripts",
     "acceptance-tests",
     "webpack",
