--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf ./dist && tsc"
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "@types/yup": "^0.29.11",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.4"
