--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -4,9 +4,8 @@
     "module": "commonjs",
     "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
     "sourceMap": true,
-    "outDir": "/dist",
+    "outDir": "./dist",
     "moduleResolution": "node",
-    "declaration": true,
     "removeComments": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -18,7 +17,10 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
+    "declaration": true,
     "baseUrl": "."
   },
   "exclude": ["node_modules"],
