--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ dist/
 .idea/
 .vscode/
 .DS_Store
-.env
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
@@ -25,6 +24,8 @@ dist/
 
 # misc
 .DS_Store
+.env
+.env.prod
 .env.local
 .env.development.local
 .env.test.local
