Added lerna + created deploy server shell script. Updated all dependencies.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   ],
   "devDependencies": {
     "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.21.4",
-    "@graphql-codegen/typescript": "^1.22.0",
-    "@graphql-codegen/typescript-operations": "^1.17.16",
-    "@graphql-codegen/typescript-react-apollo": "^2.2.4",
-    "@graphql-codegen/typescript-resolvers": "^1.19.1"
+    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/typescript": "^1.22.1",
+    "@graphql-codegen/typescript-operations": "^1.18.0",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.5",
+    "@graphql-codegen/typescript-resolvers": "^1.19.2",
+    "lerna": "^4.0.0"
   },
   "scripts": {
+    "build:server": "lerna run build --scope={@abb/common,@abb/server}",
     "gen-schema": "graphql-codegen --config codegen.yml"
-  }
+  },
+  "name": "abb"
 }
