--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@ dist/
 .vscode/
 .DS_Store
 
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -24,6 +22,8 @@ dist/
 
 # misc
 .DS_Store
+
+# environment
 .env
 .env.prod
 .env.local
