--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "abb",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/expo",
+      "**/expo/**",
+      "**/expo-status-bar",
+      "**/expo-status-bar/**",
+      "**/react-native",
+      "**/react-native/**"
+    ]
+  },
   "devDependencies": {
     "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "^1.21.5",
@@ -15,6 +26,5 @@
   "scripts": {
     "build:server": "lerna run build --scope={@abb/common,@abb/server}",
     "gen-schema": "graphql-codegen --config codegen.yml"
-  },
-  "name": "abb"
+  }
 }
