--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "@types/ioredis": "^4.26.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "@types/node-fetch": "^2.5.10",
     "@types/tough-cookie": "^4.0.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
