--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist/
 /node_modules
 /.pnp
 .pnp.js
+.expo/
 
 # testing
 /coverage
@@ -34,3 +35,11 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
