Fixed issue with hoisting. Modified root package.json nohoist by removing direct react-native dep to app package json file using ['**'] to indicate to nohoist app direct dep. Added @apollo and react-router to root package.json nohoist.

--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
       "packages/*"
     ],
     "nohoist": [
-      "**/expo",
-      "**/expo/**",
-      "**/expo-status-bar",
-      "**/expo-status-bar/**",
-      "**/react-native",
-      "**/react-native/**"
+      "**/@apollo",
+      "**/@apollo/**",
+      "**/react-router",
+      "**/react-router/**"
     ]
   },
   "devDependencies": {
