--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,5 +29,10 @@
     "@types/react-native-elements": "^0.18.0",
     "@types/react-router-native": "^5.1.0",
     "typescript": "~4.3.2"
+  },
+  "workspaces": {
+    "nohoist": [
+      "**"
+    ]
   }
 }
