--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -5,19 +5,15 @@
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf dist && tsc"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.2"
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
-    "graphql": "^15.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "graphql": "^15.5.0"
   }
 }
