--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,37 +2,33 @@
   "name": "@abb/web",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "dependencies": {
     "@abb/common": "1.0.0",
     "@abb/controller": "1.0.0",
+    "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.19",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.15",
-    "@types/node": "^15.6.1",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^15.9.0",
+    "@types/react": "17.0.9",
+    "@types/react-dom": "^17.0.6",
     "antd": "^4.16.1",
     "formik": "^2.2.8",
     "graphql": "^15.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.2",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "typescript": "^4.1.2",
+    "web-vitals": "^2.0.0"
   },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
-    "@types/yup": "^0.29.11"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
   }
 }
