Issues fixed. Invalid hook call, added resolver property to fix issue with using code from outside package. Modified apollo.ts file to work with both simulators and actual devices using NativeModules from rn.

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -17,8 +17,7 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "skipLibCheck": true,
-    "baseUrl": "."
+    "skipLibCheck": true
   },
   "extends": "expo/tsconfig.base"
 }
