--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,22 +11,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@abb/common": "1.0.0",
+    "@abb/controller": "1.0.0",
     "@apollo/client": "^3.3.19",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.8",
     "graphql": "^15.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.4.1",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.16.3",
     "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@types/react": "~17.0.8",
+    "@types/react": "17.0.9",
     "@types/react-native": "~0.64.8",
-    "@types/react-native-elements": "^0.18.0",
     "@types/react-router-native": "^5.1.0",
     "typescript": "~4.3.2"
   },
